--- a/StuffSite2/Views/Home/VideoLessons.cshtml
+++ b/StuffSite2/Views/Home/VideoLessons.cshtml
@@ -1,13 +1,30 @@
-﻿@model IEnumerable<StuffSite2.Models.Videos>
+﻿@model List<StuffSite2.Models.Videos>
 @{
     ViewBag.Title = "VideoLessons";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
+@{
+    string startRow= "<div class=\"row\">";
+    string endRow = " </div>";
+}
+
 <h2>VideoLessons</h2>
 
-@foreach (var item in Model)
+@for (int i = 0; i < Model.Count<StuffSite2.Models.Videos>(); i++)
 {
-        @Html.Partial("_PartialVideoLesson", item);
-}
+    if (i % 3 == 0) {
+         @Html.Raw(startRow)     
+    }
+    @Html.Partial("_PartialVideoLesson", Model.ElementAt<StuffSite2.Models.Videos>(i));
+
+
+    if (i % 3 == 2 || i== (Model.Count<StuffSite2.Models.Videos>()-1)) {
+           @Html.Raw(endRow)
+     }
+ }
+<br>
+               
+
+
 
