--- a/StuffSite2/Views/Shared/_Layout.cshtml
+++ b/StuffSite2/Views/Shared/_Layout.cshtml
@@ -24,6 +24,8 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Видео Уроки", "VideoLessons", "Home")</li>
+                    <li>@Html.ActionLink("Материалы", "Materials", "Home")</li>
+                    <li>@Html.ActionLink("Инструменты", "Tools", "Home")</li>
                     <li>@Html.ActionLink("О программе", "About", "Home")</li>
                     <li>@Html.ActionLink("Контакт", "Contact", "Home")</li>
                 </ul>
