--- a/StuffSite2/Views/Home/Materials.cshtml
+++ b/StuffSite2/Views/Home/Materials.cshtml
@@ -33,11 +33,7 @@
 <div class="row">
 
     <div class="col-lg-3 text-center">
-        
-        <h3 style="color:red" >@Html.ActionLink("FIVE", "VideoLessons", "Home")</h3>
-
+        <a href='@Url.Action("Index","Materials", new {id="1"})'><h3 style="color:red">FIVE</h3></a>
         <a href='@Url.Action("VideoLessons","Home")'><img src="~/images/g8010200316.jpg" /></a>
-        @*@Url.Action("Edit", new { id = item.ID })*@
-        @*<a href='@Html.ActionLink("FIVE", "VideoLessons", "Home")'><img src="~/images/g8010200316.jpg" /></a>*@
         </div>
     </div>
