IMPR: materials view

--- a/StuffSite2/Views/Home/Materials.cshtml
+++ b/StuffSite2/Views/Home/Materials.cshtml
@@ -7,33 +7,33 @@
 <h2>Materials</h2>
 <div class="row">
     <div class="col-lg-3 text-center">
-        <h3 style="color:red">FIMO</h3>
-        <img src="~/images/81.jpg" alt="Alternate Text" />
+        <a href='@Url.Action("Index","Materials", new {id="1"})'><h3 style="color:red">FIMO</h3></a>
+        <a href='@Url.Action("Index","Materials", new {id="1"})'><img src="~/images/81.jpg" alt="Alternate Text" /></a>
     </div>
 
     <div class="col-lg-3 text-center">
-        <h3 style="color:red">NotFimo</h3>
+        <a href='@Url.Action("Index","Materials", new {id="3"})'><h3 style="color:red">NotFimo</h3></a>
 
-        <img src="~/images/df8010200190l.jpg" />
-    </div>
-
-    <div class="col-lg-3 text-center">
-        <h3 style="color:red">Name</h3>
-
-        <img src="~/images/df8010200210l.jpg" />
-    </div>
+        <a href='@Url.Action("Index","Materials", new {id="3"})'> <img src="~/images/df8010200190l.jpg" /></a>
+</div>
 
     <div class="col-lg-3 text-center">
-        <h3 style="color:red">Four</h3>
+        <a href='@Url.Action("Index","Materials", new {id="2"})'><h3 style="color:red">Волшебница</h3></a>
+
+        <a href='@Url.Action("Index","Materials", new {id="2"})'><img src="~/images/df8010200210l.jpg" /></a>
+</div>
+
+    <div class="col-lg-3 text-center">
+        <a href='@Url.Action("Index","Materials", new {id="3"})'><h3 style="color:red">FIVE</h3></a>
 
         <img src="~/images/g40488806712.jpg" />
-    </div>
+</div>
 
  </div>
 <div class="row">
 
     <div class="col-lg-3 text-center">
         <a href='@Url.Action("Index","Materials", new {id="1"})'><h3 style="color:red">FIVE</h3></a>
-        <a href='@Url.Action("VideoLessons","Home")'><img src="~/images/g8010200316.jpg" /></a>
+        <a href='@Url.Action("Index","Materials", new {id="1"})')'><img src="~/images/g8010200316.jpg" /></a>
         </div>
     </div>
