--- a/StuffSite2/Views/Home/Index.cshtml
+++ b/StuffSite2/Views/Home/Index.cshtml
@@ -1,10 +1,19 @@
-﻿@{
+﻿@model IEnumerable<StuffSite2.Models.Product>
+@{
     ViewBag.Title = "Home Page";
 }
 
 <div class="jumbotron">
     <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
+    <p class="lead">
+        @foreach (StuffSite2.Models.Product b in Model)
+            {
+            
+        <p>@b.Name</p>
+        <p>@b.ID</p>
+        <p>@b.Price</p>
+        }
+    ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
     <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
 </div>
 
