Fix db, materials

--- a/StuffSite2/Views/Home/Materials.cshtml
+++ b/StuffSite2/Views/Home/Materials.cshtml
@@ -1,4 +1,5 @@
-﻿
+﻿@model IEnumerable<StuffSite2.Models.Product>
+
 @{
     ViewBag.Title = "Materials";
     Layout = "~/Views/Shared/_Layout.cshtml";
@@ -6,34 +7,40 @@
 
 <h2>Materials</h2>
 <div class="row">
-    <div class="col-lg-3 text-center">
+    @foreach (var item in Model)
+    {
+        @Html.Partial("_PartialMaterials", item);
+    }
+
+
+    @*<div class="col-lg-3 text-center">
         <a href='@Url.Action("Index","Materials", new {id="1"})'><h3 style="color:red">FIMO</h3></a>
         <a href='@Url.Action("Index","Materials", new {id="1"})'><img src="~/images/81.jpg" alt="Alternate Text" /></a>
-    </div>
+    </div>*@
 
-    <div class="col-lg-3 text-center">
-        <a href='@Url.Action("Index","Materials", new {id="3"})'><h3 style="color:red">NotFimo</h3></a>
+    @*<div class="col-lg-3 text-center">
+        <a href='@Url.Action("Index","Materials", new {id="4"})'><h3 style="color:red">NotFimo</h3></a>
 
-        <a href='@Url.Action("Index","Materials", new {id="3"})'> <img src="~/images/df8010200190l.jpg" /></a>
+        <a href='@Url.Action("Index","Materials", new {id="4"})'> <img src="~/images/df8010200190l.jpg" /></a>
+</div>*@
+
+    @*<div class="col-lg-3 text-center">
+        <a href='@Url.Action("Index","Materials", new {id="5"})'><h3 style="color:red">Волшебница</h3></a>
+
+        <a href='@Url.Action("Index","Materials", new {id="5"})'><img src="~/images/df8010200210l.jpg" /></a>
 </div>
 
     <div class="col-lg-3 text-center">
-        <a href='@Url.Action("Index","Materials", new {id="2"})'><h3 style="color:red">Волшебница</h3></a>
-
-        <a href='@Url.Action("Index","Materials", new {id="2"})'><img src="~/images/df8010200210l.jpg" /></a>
-</div>
-
-    <div class="col-lg-3 text-center">
-        <a href='@Url.Action("Index","Materials", new {id="3"})'><h3 style="color:red">FIVE</h3></a>
+        <a href='@Url.Action("Index","Materials", new {id="6"})'><h3 style="color:red">FIVE</h3></a>
 
         <img src="~/images/g40488806712.jpg" />
-</div>
+</div>*@
 
  </div>
-<div class="row">
+@*<div class="row">
 
     <div class="col-lg-3 text-center">
         <a href='@Url.Action("Index","Materials", new {id="1"})'><h3 style="color:red">FIVE</h3></a>
         <a href='@Url.Action("Index","Materials", new {id="1"})')'><img src="~/images/g8010200316.jpg" /></a>
         </div>
-    </div>
+    </div>*@
