--- a/StuffSite2/Views/Materials/_MaterialsPartishal.cshtml
+++ b/StuffSite2/Views/Materials/_MaterialsPartishal.cshtml
@@ -6,7 +6,7 @@
 <div>
     <div class="row equal" @*style="display:table"*@>
         <div class="col-lg-4 text-center" style="display:table-cell">
-            <h1 style="color:red">@ViewBag.tempProd.Name</h1>
+            <h1 style="color:red">@Model.Name</h1>
             <img src="@Model.Image" alt="Alternate Text" />
         </div>
 
