--- a/StuffSite2/Views/Shared/_Layout.cshtml
+++ b/StuffSite2/Views/Shared/_Layout.cshtml
@@ -28,7 +28,7 @@
                     <li>@Html.ActionLink("Инструменты", "Tools", "Home")</li>
                     <li>@Html.ActionLink("О программе", "About", "Home")</li>
                     <li>@Html.ActionLink("Контакт", "Contact", "Home")</li>
-                    @*<li>@Html.ActionLink("Тест", "Index", "Products")</li>*@
+                    <li>@Html.ActionLink("Тест", "Index", "Products")</li>
                 </ul>
             </div>
         </div>
